test/compile-errors/duplicate-declaration.crow
main nat64^(_ string[])
	()

foo record
	a nat
	a nat

foo union
	b
	b nat

foo enum
	c
	c

foo flags
	d
	d

s spec
s spec

f nat(a nat, a nat)
	a

f nat()
	a = 1
	a = 2
	a

f nat(a nat)
	a = 1
	a

f nat()
	1 do a =>
		a = 1
		a

f nat()
	1 do a =>
		b = 1
		1 do b =>
			a = 2
			b

f nat()
	1 do a =>
		1 do a =>
			a

do nat(_ nat, f fun nat(nat))
	f[0]
